--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
   position: relative;
   cursor: pointer;
   flex-shrink: 0;
-  width: 18px;
-  height: 18px;
+  width: 10px;
+  height: 10px;
   margin-left: 8px;
 }
 .layer-toggle::after {
@@ -316,54 +316,68 @@
       padding: 6px 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.2);
     }
-    #selection-summary {
-      background: #f9f9f9;
-      border-radius: 6px;
-      padding: 8px;
-      margin-top: 8px;
-      font-size: 13px;
-      border: 1px solid #ddd;
-      color: #222;
-    }
-    #export-dropdown {
-  position: fixed;
-  right: 20px;
-  bottom: 110px; /* adjust to be just above your drawing tools */
-  z-index: 1200;
-  user-select: none;
+#selection-summary {
+  background: #f9f9f9;
+  border-radius: 6px;
+  padding: 8px;
+  margin-top: 8px;
+  font-size: 13px;
+  border: 1px solid #ddd;
+  color: #222;
+  display: inline-block;       /* zodat knop ernaast kan staan */
+  vertical-align: middle;
+  margin-right: 8px;           /* ruimte tussen tekst en knop */
 }
 
-/* Main export button styling */
+/* Verwijder oude dropdown container styling */
+#export-dropdown {
+  position: static;            /* geen fixed meer */
+  right: auto;
+  bottom: auto;
+  z-index: auto;
+  user-select: auto;
+  display: inline-block;       /* zodat het inline kan naast #selection-summary */
+}
+
+/* Maak export knop klein, iconisch, zonder achtergrondkleur */
 #export-btn {
-  background: #2C3E83;
-  color: white;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 4px;
+  display: none;               /* standaard niet zichtbaar */
   cursor: pointer;
-  font-size: 14px;
-  min-width: 100px;
+  background: none;
+  border: none;
+  padding: 0;
+  vertical-align: middle;
+  color: #2C3E83;
+  width: 20px;
+  height: 20px;
 }
 
-/* Dropdown menu */
+/* Hover kleur voor knop */
+#export-btn:hover {
+  color: #1a2a5a;
+}
+
+/* SVG icoon binnen knop altijd passend */
+#export-btn svg {
+  width: 100%;
+  height: 100%;
+  fill: currentColor;
+}
+
+/* Dropdown menu styling niet meer nodig, dus kan weg */
 .export-options {
-  margin-top: 6px;
-  background: white;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  border-radius: 4px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  display: none;
 }
 
 /* Hide dropdown by default */
 .hidden {
   display: none;
 }
-    .control-box > #close-menu-btn {
-      margin-top: 8px;
-      margin-bottom: 0;
-    }
+
+.control-box > #close-menu-btn {
+  margin-top: 8px;
+  margin-bottom: 0;
+}
     .leaflet-div-icon.leaflet-editing-icon,
     .leaflet-div-icon.leaflet-draw-edit-edit,
     .leaflet-div-icon.leaflet-draw-edit-move {
@@ -451,6 +465,12 @@
   </label>
   
 <div id="selection-summary"></div>
+<button id="export-btn" style="display:none;" title="Export selection">
+  <!-- Icon, bijvoorbeeld een download SVG -->
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M.5 9.9v4.6A1.5 1.5 0 002 16h12a1.5 1.5 0 001.5-1.5v-4.6a.5.5 0 00-1 0v4.6a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-4.6a.5.5 0 00-1 0zM7.646 10.854a.5.5 0 00.708 0l3-3a.5.5 0 00-.708-.708L8.5 9.293V1.5a.5.5 0 00-1 0v7.793L5.354 7.146a.5.5 0 00-.708.708l3 3z"/>
+  </svg>
+</button>
   
 <div id="export-dropdown" class="export-dropdown">
   <button id="export-btn">Export</button>
@@ -964,14 +984,17 @@ document.getElementById('toggle-grid').addEventListener('change', function () {
     const areaKm2 = totalAreaSqMeters / 1e6;
 
     if(count > 0){
-      controlBox.classList.add('show-stats');
-      document.getElementById('selection-summary').innerHTML =
-        `Total selected cells: ${count}<br>
-        Total area: ${areaKm2.toFixed(1)} km²<br>
-        Average MCA score: ${meanScore.toFixed(2)}`;
-    } else {
-      clearSelectionAndStats();
-    }
+  controlBox.classList.add('show-stats');
+  document.getElementById('selection-summary').innerHTML = `
+    Total selected cells: ${count}<br>
+    Total area: ${areaKm2.toFixed(1)} km²<br>
+    Average MCA score: ${meanScore.toFixed(2)}
+  `;
+  document.getElementById('export-btn').style.display = 'inline-block';  // knop tonen
+} else {
+  clearSelectionAndStats();
+  document.getElementById('export-btn').style.display = 'none';        // knop verbergen
+}
   });
 
   // Catch draw:deleted event (trash bin and programmatic deletes)
