--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
   position: relative;
   cursor: pointer;
   flex-shrink: 0;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   margin-left: 8px;
 }
 .layer-toggle::after {
@@ -308,13 +308,13 @@
       box-shadow: 0 1px 3px rgba(0,0,0,0.2);
       z-index: 1200;
     }
-    .leaflet-control-layers {
-      top: 14px !important;
-      right: 4px !important;
-      background: rgba(255, 255, 255, 0.8);
-      border-radius: 6px;
-      padding: 6px 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    .leaflet-control-layers-overlays label {
+  font-size: 10px;
+}
+.leaflet-control-layers-overlays input[type="checkbox"] {
+  width: 12px;
+  height: 12px;
+}
     }
 #selection-summary {
   background: #f9f9f9;
