Update index.html - Gebouwenlaag

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="control-row">
   <label class="inline-checkbox">
     <input type="checkbox" id="toggle-buildings" class="layer-toggle" title="Show buildings layer" />
-    Gebouwen laag
+  Buildings layer
   </label>
         
 </div>
@@ -248,7 +248,7 @@ function loadGebouwenLayer() {
     });
 
     // laad de GeoJSON data
-    fetch('Gebouwen.geojson')
+    fetch('data/Gebouwen.geojson')
       .then(response => response.json())
       .then(data => {
         gebouwenLayer.addData(data);
