--- a/index.html
+++ b/index.html
@@ -492,8 +492,19 @@ const SingleSelectControl = L.Control.extend({
     const button = L.DomUtil.create('a', '', container);
     button.href = '#';
     button.title = 'Select single cell';
-    button.innerHTML = '☝️'; // Or replace with your icon/SVG
+  button.innerHTML = `
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="grey" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+    <path d="M3 2L21 12L3 22V2Z" />
+    <line x1="21" y1="12" x2="14" y2="15" />
+  </svg>`;
 
+document.getElementById('selection-summary').innerHTML =
+  `Selected: <b>1</b> gridcell<br>` +
+  `Area: <b>${(area / 1e6).toFixed(3)}</b> km²<br>` +
+  `Score: <b>${score.toFixed(2)}</b>`;
+
+controlBox.classList.add('show-stats');
+    
     L.DomEvent.disableClickPropagation(container);
     L.DomEvent.on(button, 'click', L.DomEvent.preventDefault)
       .on(button, 'click', () => {
