--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       overflow: hidden;
     }
     #header-container {
-      position: absolute; top: 0; left: 0; right: 0; height: 80px;
+      position: absolute; top: 0; left: 0; right: 0; height: 36px;
       background: white; display: flex; align-items: center; padding: 0 15px;
       z-index: 1200; user-select: none;
     }
-    #logo { height: 40px; margin-right: 15px; }
-    #page-title { font-size: 18px; font-weight: 700; color: #2C3E83; }
+    #logo { height: 32px; margin-right: 15px; }
+    #page-title { font-size: 16px; font-weight: 700; color: #2C3E83; }
     #map {
-      position: absolute; top: 50px; left: 0; right: 0; bottom: 0;
+      position: absolute; top: 36px; left: 0; right: 0; bottom: 0;
       z-index: 0; background: #eee;
     }
     .control-box {
@@ -143,7 +143,7 @@
         
 </div>
     </div>
-    <label id="transparency-label" for="transparency-slider">Raster transparency of grid:
+    <label id="transparency-label" for="transparency-slider">Grid transparency:
       <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
       <span id="percent-transparency">50%</span>
     </label>
