--- a/index.html
+++ b/index.html
@@ -429,13 +429,42 @@ document.getElementById('toggle-buildings').addEventListener('change', function(
         return km2.toLocaleString('nl-NL', {maximumFractionDigits: 2}) + ' km²';
       }
     }
-    const drawControl = new L.Control.Draw({
-      position:"bottomright",
-      edit: { featureGroup: drawnItems, edit: false, remove: true },
-      draw: { polygon: true, rectangle: true, polyline: false, circle: false, marker: false, circlemarker: false }
-    });
+const drawControl = new L.Control.Draw({
+  position: "bottomright",
+  draw: {
+    polygon: true,
+    rectangle: true,
+    polyline: false,
+    circle: false,
+    marker: true,
+    circlemarker: false
+  }
+});
     map.addControl(drawControl);
 
+const deleteBtn = L.control({ position: 'bottomright' });
+deleteBtn.onAdd = function () {
+  const btn = L.DomUtil.create('div', 'leaflet-bar leaflet-control leaflet-control-custom');
+  btn.innerHTML = '🗑️';
+  btn.title = 'Delete selection';
+  btn.style.backgroundColor = 'white';
+  btn.style.width = '30px';
+  btn.style.height = '30px';
+  btn.style.lineHeight = '30px';
+  btn.style.textAlign = 'center';
+  btn.style.cursor = 'pointer';
+  btn.style.fontSize = '18px';
+  btn.style.boxShadow = '0 1px 4px rgba(0,0,0,0.4)';
+  btn.onclick = function () {
+    if (selectedFeatures.length === 0) return;
+    if (confirm('Are you sure you want to delete your selection?')) {
+      clearSelectionAndStats();
+    }
+  };
+  return btn;
+};
+deleteBtn.addTo(map);
+    
     map.on(L.Draw.Event.CREATED, function (event) {
       const layer = event.layer;
       drawnItems.clearLayers();
