Update index.html - statistics reappearing?

--- a/index.html
+++ b/index.html
@@ -464,46 +464,41 @@ deleteBtn.onAdd = function () {
   return btn;
 };
 deleteBtn.addTo(map);
-  
+    
 map.on(L.Draw.Event.CREATED, function (event) {
   const layer = event.layer;
   drawnItems.clearLayers();
   drawnItems.addLayer(layer);
 
-  let popupContent = "";
-
   if (event.layerType === "marker") {
-    // Don't show popup or lat/lng info for marker
-    // You can skip popup here entirely or just leave popupContent empty
-    popupContent = ""; // or simply skip binding popup
-    
-    // Optionally, still apply smaller icon if you want
+    // For markers, no popup and clear stats summary
     const smallIcon = L.icon({
       iconUrl: "https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png",
-      iconSize: [20, 30], // smaller
+      iconSize: [20, 30],
       iconAnchor: [10, 30]
     });
     layer.setIcon(smallIcon);
 
-    // Also clear stats since marker doesn't count as grid selection
+    // Clear stats
     document.getElementById('selection-summary').innerHTML = '';
     controlBox.classList.remove('show-stats');
+
   } else if (event.layerType === "rectangle" || event.layerType === "polygon") {
     const latlngs = layer.getLatLngs()[0];
     const areaSqMeters = L.GeometryUtil.geodesicArea(latlngs);
     const areaKm2 = areaSqMeters / 1e6;
 
-    // Get selected grid cells intersecting this area, for example:
-    const selected = getSelectedGridCells(layer); // You need to define this based on your data
+    // Get selected grid cells intersecting this shape (you need to define this function)
+    const selected = getSelectedGridCells(layer);
 
-    // Calculate total suitability score & average
+    // Calculate total and average suitability score
     let totalScore = 0;
     selected.forEach(cell => {
       totalScore += cell.properties.mca_score || 0;
     });
     const avgScore = selected.length > 0 ? (totalScore / selected.length) : 0;
 
-    popupContent = `
+    const popupContent = `
       <b>Area Selected</b><br>
       Area: approx. ${areaKm2.toFixed(2)} km²<br>
       Number of grid cells: ${selected.length}<br>
@@ -512,13 +507,16 @@ map.on(L.Draw.Event.CREATED, function (event) {
 
     layer.bindPopup(popupContent).openPopup();
 
-    // Update summary box
-    if(selected.length){
+    // Update stats summary
+    if (selected.length) {
       document.getElementById('selection-summary').innerHTML =
         `Selected: <b>${selected.length}</b> gridcells<br>` +
         `Area: <b>${areaKm2.toFixed(2)}</b> km²<br>` +
         `Avg. score: <b>${avgScore.toFixed(2)}</b>`;
       controlBox.classList.add('show-stats');
+    } else {
+      document.getElementById('selection-summary').innerHTML = '';
+      controlBox.classList.remove('show-stats');
     }
   }
 });
